--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
     margin: 0;
 }
 .color-sec {
-    background-color: #dfe2e6;
+    background-color: #202324;
 }
 
 /* Imágen logo */
@@ -90,13 +90,13 @@
 }
 
 .color {
-    background-color: #007bff;
+    background-color: #0e0f0f;
 }
 
 .logo-footer img {
     width: 15%;
     object-fit: cover;
-    background-color: #007bff;
+   
 }
 
 iframe {
@@ -223,6 +223,7 @@ p {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.7;
+    color: #b0a99f;
 
 }
 
