--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,15 @@
   height: 50px;
 }
 
+
 /* Nav color */
 .color {
   background-color: #007bff;
+}
+
+#avatar{
+  width: 50px;
+  height: 50px;
 }
 
 .carousel-inner .carousel-item {
