--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
     margin: 0;
 }
 .color-sec {
-    background-color: #202324;
+    background-color: #dfe2e6;
 }
 
 /* Imágen logo */
@@ -90,13 +90,13 @@
 }
 
 .color {
-    background-color: #0e0f0f;
+    background-color: #007bff;
 }
 
 .logo-footer img {
     width: 15%;
     object-fit: cover;
-   
+    background-color: #007bff;
 }
 
 iframe {
@@ -223,7 +223,6 @@ p {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.7;
-    color: #b0a99f;
 
 }
 
@@ -512,3 +511,6 @@ h6 span {
     font-size: 10px;
 } 
 
+table tr td{
+    vertical-align: middle;
+}
