--- a/css/styles.css
+++ b/css/styles.css
@@ -21,13 +21,12 @@
   height: 50px;
 }
 
-
 /* Nav color */
 .color {
   background-color: #007bff;
 }
 
-#avatar{
+#avatar {
   width: 50px;
   height: 50px;
 }
@@ -502,9 +501,14 @@ h6 span {
 }
 
 .card-text {
-    font-size: 10px;
-} 
+  font-size: 10px;
+}
 
-table tr td{
-    vertical-align: middle;
+table tr td {
+  vertical-align: middle;
+}
+
+#imgcar {
+  width: 100px;
+  height: 100px;
 }
