--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,7 @@ table tr td{
     --font3: 'Roboto', sans-serif
 }
 
-.card-body {
+.cat-body {
     font-family: var(--font3);
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%)
 }
