--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,10 @@
 .color {
   background-color: #007bff;
 }
-
+/* contacto color */
+.color-contact {
+  background-color: #00063f;
+}
 #avatar {
   width: 50px;
   height: 50px;
@@ -70,7 +73,7 @@
 .suscribirse {
   position: fixed;
   bottom: 5.5rem;
-  right: 0.5rem;
+  right: 0.8rem;
 }
 .suscribirse img {
   height: 3rem;
