--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,8 @@
 /* Footer */
 
 .footer-container {
-  width: 100%;
+  background-color: #333; /* Cambia el color de fondo según corresponda */
+  color: white; /* Cambia el color del texto según corresponda */
 }
 
 .color {
@@ -125,7 +126,7 @@ iframe {
 
 /* Acerca de nosotros */
 
-.circle {
+/* .circle {
   width: 150px;
   height: 150px;
   border-radius: 100%;
@@ -141,7 +142,51 @@ iframe {
   height: 300px;
   margin: 15px;
 }
+ */
+.custom-card {
+  width: 100%;
+  max-width: 800px;
+  margin: 20px;
+  cursor: pointer;
+  perspective: 1000px;
+  position: relative;
+  z-index: 0;
+}
 
+.custom-card .card {
+  width: 100%;
+  transform-style: preserve-3d;
+  transition: transform 1.5s;
+}
+
+.custom-card .card-front,
+.custom-card .card-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.custom-card .card-front {
+  background-color: #ffffff;
+  transform: rotateY(0deg);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.custom-card .card-back {
+  background-color: #ffffff;
+  transform: rotateY(180deg);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.custom-card:hover .card {
+  transform: rotateY(180deg);
+}
+
+.card-back {
+  padding: 20px;
+  transform: rotateY(180deg);
+}
 /* contacto */
 .texto-color {
   color: #ffffff;
